# test-fastly-mte

./: .gitignore  Cargo.toml  README.md  arch.drawio  config.tf  fastly.tf  fastly.toml
local/: final-config-block.json  routes-1.json  routes-2.json  routes-mapping.json
src/: logger.rs  main.rs
