[package]
name = "test-fastly-mte"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
anyhow = "1.0.68"
fastly = "^0.9.1"
log = "0.4.20"
log-fastly = "0.9.9"
serde = "1.0.188"
serde_json = "1.0.107"